Collegamento DB e setup Model + verifica del corretto salvataggio degli utenti nel DB